--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <script src="js/controllers/packagectrl.js"></script>
 <script src="js/controllers/config.js"></script>
 <script defer="defer" src="js/ng-grid/flex-height.js"></script>
+<script defer="defer" src="js/controllers/datactrl.js"></script>
 <script defer="defer" src="js/controllers/schemactrl.js"></script>
 <script src="js/controllers/servicectrl.js"></script>
 <script src="js/controllers/filectrl.js"></script>
