removed data functionality from schema, UI updates

--- a/data.html
+++ b/data.html
@@ -22,7 +22,7 @@
         <td>&nbsp;</td>
         <td id="app-details" class="well">
             <div class="navbar">
-                <div class="navbar-inner"><div class="brand">Tables</div>
+                <div class="navbar-inner"><div class="brand">Manage Data</div>
 
                 </div>
             </div>
