--- a/schema.html
+++ b/schema.html
@@ -5,7 +5,7 @@
                 <table id="app-list" class="table table-hover table-striped">
                     <thead>
                     <tr>
-                        <th>Table&nbsp;<small style="font-weight:normal">(Click to browse data)</small></th>
+                        <th>Table</th>
 
                         <th class="no-border"></th>
                     </tr>
@@ -13,12 +13,9 @@
                     <tbody>
 
                     <tr ng-repeat="table in schemaData" id="row_{{table.name}}">
-                        <td ng-click="showData()">{{table.name}}</td>
+                        <td ng-click="showSchema()">{{table.name}}</td>
                         <td class="no-border">
-                            <div class="btn-group">
-                                <a ng-click="showSchema()" class="btn btn-small btn-inverse" title="Edit schema"><i class="icon-edit"></i></a>
-                                <a class="btn btn-small btn-inverse" title="Delete this table" ng-click="delete()"><i class="icon-trash"></i></a>
-                            </div>
+                            <a class="btn btn-small btn-inverse" title="Delete this table" ng-click="delete()"><i class="icon-trash"></i></a>
                         </td>
                     </tr>
 
@@ -29,7 +26,7 @@
         <td>&nbsp;</td>
         <td id="app-details" class="well">
             <div class="navbar">
-                <div class="navbar-inner"><div class="brand">Tables</div>
+                <div class="navbar-inner"><div class="brand">Manage Schema</div>
                     <div class="btn-group pull-right">
                         <a ng-click="showJSON()" class="btn btn-small">
                             <li class="icon-upload-alt"></li>
