--- a/schema.html
+++ b/schema.html
@@ -42,7 +42,7 @@
                     <div id="grid-container">
                         <div class="alert alert-info">
                             <li class="icon-info-sign"></li>
-                            &nbsp;View / Edit your database schema below. The first row is used to add a new field.
+                            &nbsp;Add or Delete fields from your database schema below. The first row is used to add a new field.
                         </div>
                         <div id="schema-main" ng-grid="browseOptions"></div>
                     </div>
