--- a/groups.html
+++ b/groups.html
@@ -39,6 +39,10 @@
 						</div>
 					</div>
 				</div>
+                <div class="alert alert-info">
+                    <li class="icon-info-sign"></li>
+                    Applications can optionally be put into groups. When selecting an application to launch they will be ordered by group.
+                </div>
 				<div class="add_new">
 					<h5 class="text-info">{{action}} a Group</h5>
 
@@ -55,7 +59,7 @@
 							<input ng-model="group.description" type="text" />
 						</div>
 						<div class="section">
-							Assign Apps to this group.
+							<p>Assign Apps to this group.</p>
 							<div class="well">
 								<table class="table table-hover table-striped table-bordered">
 
