--- a/services.html
+++ b/services.html
@@ -37,6 +37,10 @@
                     </div>
                 </div>
             </div>
+            <div class="alert alert-info">
+                <li class="icon-info-sign"></li>
+                Services are used by apps to provide functionality. This could be file/blob storage, database, email, or any external web service with a REST API. You can add as many services as you like.
+            </div>
             <div>
 
                 <div class="detail-view"></div>
