--- a/users.html
+++ b/users.html
@@ -64,7 +64,10 @@
                             </div>
                             <div class="section">
                                 <p>Assign a Role</p>
-
+                                <div class="alert alert-info">
+                                    <li class="icon-info-sign"></li>
+                                    Roles provide a way to grant or deny access to specific applications and services on a per-user basis. Each user who is not a system admin must be assigned a role. Go to the Roles tab to create and manage roles.
+                                </div>
                                 <div>
                                     <select ng-disabled="user.is_sys_admin" ng-model="user.role_id">
                                         <option ng-selected = "user.role_id == role.id" ng-repeat="role in Roles.record" value="{{role.id}}">{{role.name}}</option>
