Don't show help text for preview and file manager on apps screen.

--- a/applications.html
+++ b/applications.html
@@ -45,7 +45,7 @@
                     </div>
                 </div>
             </div>
-            <div class="alert alert-info">
+            <div class="alert alert-info" ng-show="action=='Create' || action=='Update'">
                 <li class="icon-info-sign"></li>
                 DreamFactory makes it easy to build and deploy applications by providing all the back-end infrastructure. Use this tab to manage your apps.
             </div>
