Decouple display_name (for now).

--- a/users.html
+++ b/users.html
@@ -51,11 +51,10 @@
                             <div class="section">
                                 Email :  <input ng-model="user.email" type="email" required/>
                            <br/>
-                                First Name : <input class="input-small"  ng-model="user.first_name" type="text" required/>
-                                Last Name :  <input class="input-small"  ng-model="user.last_name" type="text" required/>
+                                First Name : <input class="input-small" ng-model="user.first_name" type="text" required/>
+                                Last Name :  <input class="input-small" ng-model="user.last_name" type="text" required/>
                            <br/>
-                                Display Name : <input ng-model="user.display_name"
-                                                      ng-bind="{{user.display_name}}" value="{{user.first_name}}&nbsp{{user.last_name}}" type="text"/>
+                                Display Name : <input ng-model="user.display_name" type="text"/>
                             <br/>
                                 Phone : <input ng-model="user.phone" type="tel"/>
                             </div>
