--- a/import.html
+++ b/import.html
@@ -21,7 +21,9 @@
                 <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-calendar/raw/master/calendar.dfpkg')">Calendar</a>
                 - Another sample application showing how to perform CRUD operations on your DSP.<br/>
                 <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-swagger/raw/master/swagger.dfpkg')">Live API Docs</a>
-                - Live API documentation for the DreamFactory Services Platform, built with Swagger.
+                - Live API documentation for the DreamFactory Services Platform, built with Swagger.<br/>
+                <a href="" onclick="$('#urlInput').val('http://www.dreamfactory.com/dsp/package/add_min.dfpkg')">Address Book</a>
+                - An address book for mobile and desktop written by Modus Create. Based on Ext JS and Sencha Touch 2.
             </div>
         </form>
         <iframe style="display:none" frameBorder="0" id="importUrlIframe" name="importUrlIframe" src="about:blank" onload="checkResults(this)" width="100%" height="70px"></iframe>
