Pull minified address book from github.

--- a/import.html
+++ b/import.html
@@ -22,7 +22,7 @@
                 - Another sample application showing how to perform CRUD operations on your DSP.<br/>
                 <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-swagger/raw/master/swagger.dfpkg')">Live API Docs</a>
                 - Live API documentation for the DreamFactory Services Platform, built with Swagger.<br/>
-                <a href="" onclick="$('#urlInput').val('http://www.dreamfactory.com/dsp/package/add_min.dfpkg')">Address Book</a>
+                <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-address-book/raw/master/add_min.dfpkg')">Address Book</a>
                 - An address book for mobile and desktop written by Modus Create. Based on Ext JS and Sencha Touch 2.
             </div>
         </form>
