removed extra controller attribute in partial

--- a/config.html
+++ b/config.html
@@ -1,4 +1,4 @@
-<table style="width:100%" ng-controller="ConfigCtrl">
+<table style="width:100%" >
     <tr>
         <td id="config-details" class="well">
             <div class="navbar">
