--- a/files.html
+++ b/files.html
@@ -1,3 +1,3 @@
-<div ng-controller="FileCtrl" id="root-file-manager">
+<div  id="root-file-manager">
     <iframe frameBorder=0 ng-src=""></iframe>
 </div>
