--- a/users.html
+++ b/users.html
@@ -1,4 +1,4 @@
-<table style="width:100%" ng-controller="UserCtrl">
+<table style="width:100%" >
     <tr>
         <td id="item-list" class="well">
             <div id="grid-table" >
