--- a/package.html
+++ b/package.html
@@ -1,4 +1,4 @@
-<table style="width:100%" ng-controller="PackageCtrl">
+<table style="width:100%" >
     <tr>
         <td id="item-list" class="well">
             <div id="grid-table">
