--- a/roles.html
+++ b/roles.html
@@ -1,4 +1,4 @@
-<table style="width:100%" ng-controller="RoleCtrl">
+<table style="width:100%">
     <tr>
         <td id="item-list" class="well">
             <div id="grid-table">
