ability to select row and click to edit at the same time, necessary for showing related data. new buildColumns method shared between methods that call the db and update the grid.

--- a/data.html
+++ b/data.html
@@ -38,7 +38,7 @@
                         <div id="schema-main" ng-grid="browseOptions"></div>
                         <div ng-show = "relatedOptions.length">
                             <select ng-model = "related" ng-options = "option.name as option.name for option in relatedOptions">
-                                <option value="">Related Data - Coming Soon</option>
+                                <option value="">Related Data</option>
                             </select>
 
                         </div>
