--- a/config.html
+++ b/config.html
@@ -1,4 +1,4 @@
-<table style="width:100%" >
+<table style="width:100%">
     <tr>
         <td id="config-details" class="well">
             <div class="navbar">
@@ -12,39 +12,90 @@
                 </div>
                 <div class="section">
                     <h5>Open Registration</h5>
+
                     <div class="alert alert-info">
                         <li class="icon-info-sign"></li>
-                        &nbsp;If enabled, new users can add themselves as users to this DSP and will be assigned the selected role. If disabled, only an admin can add new users to this DSP.
+                        &nbsp;If enabled, new users can add themselves as users to this DSP and will be assigned the
+                        selected role. If disabled, only an admin can add new users to this DSP.
                     </div>
-                    <input type="checkbox" ng-checked="Config.allow_open_registration" ng-model="Config.allow_open_registration"/>&nbsp;&nbsp;Allow open registration
+                    <input type="checkbox" ng-checked="Config.allow_open_registration"
+                           ng-model="Config.allow_open_registration"/>&nbsp;&nbsp;Allow open registration
                     <br/>
                     <br/>
+
                     <div>
                         <p>Assign a Default Role for Open Registration Users</p>
+
                         <div>
                             <select ng-disabled="!Config.allow_open_registration" ng-model="Config.open_reg_role_id">
-                                <option ng-selected = "Config.open_reg_role_id == role.id" ng-repeat="role in Roles.record" value="{{role.id}}">{{role.name}}</option>
+                                <option ng-selected="Config.open_reg_role_id == role.id"
+                                        ng-repeat="role in Roles.record" value="{{role.id}}">{{role.name}}
+                                </option>
                             </select>
                         </div>
                     </div>
                 </div>
                 <div class="section">
                     <h5>Guest Users</h5>
+
                     <div class="alert alert-info">
                         <li class="icon-info-sign"></li>
-                        &nbsp;If enabled, the DSP is available with no sign-in required and all guest users will be assigned the selected role. If disabled, sign-in is required.
+                        &nbsp;If enabled, the DSP is available with no sign-in required and all guest users will be
+                        assigned the selected role. If disabled, sign-in is required.
                     </div>
-                    <input type="checkbox" ng-checked="Config.allow_guest_user" ng-model="Config.allow_guest_user"/>&nbsp;&nbsp;Allow guest users
+                    <input type="checkbox" ng-checked="Config.allow_guest_user" ng-model="Config.allow_guest_user"/>&nbsp;&nbsp;Allow
+                    guest users
                     <br/>
                     <br/>
+
                     <div>
                         <p>Assign a Role for Guest Users</p>
+
                         <div>
                             <select ng-disabled="!Config.allow_guest_user" ng-model="Config.guest_role_id">
-                                <option ng-selected = "Config.guest_role_id == role.id" ng-repeat="role in Roles.record" value="{{role.id}}">{{role.name}}</option>
+                                <option ng-selected="Config.guest_role_id == role.id" ng-repeat="role in Roles.record"
+                                        value="{{role.id}}">{{role.name}}
+                                </option>
                             </select>
                         </div>
                     </div>
+                </div>
+
+                <div class="section">
+                    <h5>CORS Access</h5>
+                    <label>Choose which hosts have cross domain access to your DSP</label>
+                    <button ng-click="promptForNew()" class="btn btn-success"><li class="icon-add"></li> Add New Host</button>
+                    <br/><br/>
+                    <table id="cors-list" class="table table-hover table-striped">
+
+                        <tbody>
+                        <tr>
+                            <th></th>
+                            <th>Host</th>
+                            <th>Allowed Verbs</th>
+                            <th>Active</th>
+
+                        </tr>
+
+                        <tr ng-repeat="host in Config.allowed_hosts">
+                            <td>
+                                <li ng-click="removeHost()" class="btn btn-danger icon-remove"></li>
+                            </td>
+                            <td><input placeholder="Enter Host Name" type="text" ng-model="host.host"/></td>
+                            <td>
+                                <label><input ng-click="selectAll($event)"  ng-checked="host.verbs.length == allVerbs.length" type="checkbox"/>&nbsp;ALL</li></label>
+                                <label ng-repeat = "verb in allVerbs"><input ng-click="toggleVerb()" ng-disabled="host.verbs.length == allVerbs.length" ng-checked="host.verbs.indexOf(verb) != -1 " type="checkbox"/>&nbsp;{{verb}}</label>
+                            </td>
+                            <td>
+                                <input type="checkbox" ng-model="host.is_active"/>
+                            </td>
+
+                        </tr>
+                    </table>
+
+
+                    <!--<input type="text" placeholder="Enter Host Name" ng-model="CORS.host.name"/>-->
+                    <!--<button cls="btn btn-primary" ng-click="addHost()">Add Host</button>-->
                 </div>
                 <br/>
                 <button ng-click="save()" class="btn btn-primary">Save</button>
