is_active -> is_enabled

--- a/config.html
+++ b/config.html
@@ -73,7 +73,7 @@
                             <th></th>
                             <th>Host</th>
                             <th>Allowed Verbs</th>
-                            <th>Active</th>
+                            <th>Enabled</th>
 
                         </tr>
 
