DSP Version added to config

--- a/config.html
+++ b/config.html
@@ -7,8 +7,10 @@
                 </div>
             </div>
             <div id="config-form">
-                <div class="section">
+                <div class="section versions">
+                    <b>DSP Version:</b>&nbsp;&nbsp;{{Config.dsp_version}}<br/>
                     <b>Database Version:</b>&nbsp;&nbsp;{{Config.db_version}}
+
                 </div>
                 <div class="section">
                     <h5>Open Registration</h5>
