Add AngularJS to name.

--- a/import.html
+++ b/import.html
@@ -16,8 +16,10 @@
                 <p>Sample apps on https://github.com/dreamfactorysoftware:</p>
                 <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-helloworld/raw/master/helloworld.dfpkg')">Hello World</a>
                 - A tiny sample application showing how to make a single RESTful call to your DreamFactory Services Platform (DSP).<br/>
-                <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-todo/raw/master/todo.dfpkg')">Todo List</a>
+                <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-todo/raw/master/todo.dfpkg')">To Do List (AngularJS)</a>
                 - A simple AngularJS application showing how to create, update, and delete database records on your DSP.<br/>
+                <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-todo-sencha/raw/master/todosencha.dfpkg')">To Do List (Sencha)</a>
+                - A Sencha version of the To Do List app for mobile.<br/>
                 <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-calendar/raw/master/calendar.dfpkg')">Calendar</a>
                 - Another sample application showing how to perform CRUD operations on your DSP.<br/>
                 <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-swagger/raw/master/swagger.dfpkg')">Live API Docs</a>
