--- a/import.html
+++ b/import.html
@@ -18,6 +18,10 @@
                 - A tiny sample application showing how to make a single RESTful call to your DreamFactory Services Platform (DSP).<br/>
                 <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-todo-angular/raw/master/todoangular.dfpkg')">Todo List AngularJS</a>
                 - A simple AngularJS application showing how to create, update, and delete database records on your DSP.<br/>
+                <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-todo-jquery/raw/master/todojquery.dfpkg')">Todo List jQuery</a>
+                - A simple jQuery application showing how to create, update, and delete database records on your DSP.<br/>
+                <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-todo-sencha/raw/master/todosencha.dfpkg')">Todo List Sencha</a>
+                - A simple Sencha application (phone/tablet only) showing how to create, update, and delete database records on your DSP.<br/>
                 <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-calendar/raw/master/calendar.dfpkg')">Calendar</a>
                 - Another sample application showing how to perform CRUD operations on your DSP.<br/>
                 <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-swagger/raw/master/swagger.dfpkg')">Live API Docs</a>
