Restyled button like action resource spans, added initial support for Rackspace, Openstack

--- a/applications.html
+++ b/applications.html
@@ -52,7 +52,7 @@
             <div>
 
                 <div class="add_new">
-                    <h5 class="text-info">{{action}} application </h5>
+                    <span class="label label-info">{{action}} application</span>
 
                     <div id="file-manager">
                         <iframe style="display:none" frameBorder=0 ng-src=""></iframe>
