--- a/groups.html
+++ b/groups.html
@@ -44,7 +44,7 @@
                     Applications can optionally be put into groups. When selecting an application to launch they will be ordered by group.
                 </div>
 				<div class="add_new">
-					<h5 class="text-info">{{action}} a Group</h5>
+                    <span class="label label-info">{{action}} a group</span>
 
 					<div id="step1">
 						<div class="section">
