--- a/roles.html
+++ b/roles.html
@@ -45,7 +45,7 @@
                     <div class="detail-view"></div>
 
                     <div class="add_new">
-                        <h5 class="text-info">{{action}} role</h5>
+                        <span class="label label-info">{{action}} role</span>
 
                         <div id="step1">
                             <div class="section">
